calculated currencies
