# swagger.yaml
@@ -197,7 +197,29 @@ paths:
               schema:
                 type: object
                 $ref: '#/components/schemas/ApiResponse'
-
+  
+  /zombie/{zombieId}/items/calculate:
+    get:
+      tags:
+        - zombies
+      summary: Calculate zombie items
+      operationId: calculateZombieItems
+      parameters:
+        - name: zombieId
+          in: path
+          description: ID of zombie to return
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ApiResponse'
 components:
   schemas:
     Zombie:
